<resources>
    <string name="app_name">NUMAD17S-EmmaLiu</string>
    <string name="displayTest">hello test</string>

    <string name="serverKey">
        key=AAAAEm4qR9g:APA91bEUpUifDgXaMd1I11FbzzuJkqpWSZ2xd1eemQa5R-JZsEsGCDAL5COgKM0Nk806WjJRa4bTwVwZSyDdy24h2s8Ba6vFqzQlapd7TBGdxkXCtV5QhY1d08X1-8h7WY1edfmzOtvb
    </string>

    <!--button names-->
    <string name="button_about">About</string>
    <string name="button_error">Generate Error</string>
    <string name="button_dictionary">Dictionary</string>


    <!--aboutPage information-->
    <string name="name">Emma Yujiao Liu</string>
    <string name="email">liu.yuji@husky.neu.edu</string>
    <string name="description">2nd year MS in Computer Science</string>


    <string name="aboutTitle">About</string>
    <string name="dictionaryTitle">Test Dictionary</string>
    <string name="wordGame">Word Game</string>

    <!--DictionaryPage information-->
    <string name="hint">Type your word</string>
    <string name="acknowledgementsTitle">Acknowledgements</string>

    <string name="acknowledgements_Trie">
        Tire: https://en.wikipedia.org/wiki/Trie
    </string>

    <string name="acknowledgements_discuss">
        Discussion: Discussed idea with Yudong Wang, Enting Wu
    </string>

    <string name="acknowledgements_Piazza">
        Piazza:  Questions on Piazza related with assignment 3
    </string>
    <string name="acknowledgements_split_file">
        File_split: https://goo.gl/kYeVYb (stackOverflow)
    </string>

    <string name="myScore">Score: 0</string>
    <string name="timer">Timer: 30s</string>
    <string name="on">Pause</string>
    <string name="off">Resume</string>
    <string name="sayCongrats">Say Congrats!</string>
    <string name="chatLabel">Send Message</string>
    <string name="send">Send</string>
    <string name="winner">Congratulations! You are the winner!</string>


    <string name="app_name_ttt">UT3</string>
    <string name="long_app_name">Scroggle</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Scroggle</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="scoreboard_lable">Scoreboard</string>
    <string name="highestGameSocre">Final Score</string>
    <string name="highestSingleWord">Highest Word Score</string>
    <string name="ScoreboardButton">Scoreboard</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="dialogLabel">Dialog</string>
    <string name="close">close</string>
    <string name="WinnerNotification">Winner Notification</string>

     <string name="about_text">\
This game has two phases. For phase 1, you need to find words in each 3 x 3 grid. The
         letters of words you found will be used for phase 2\n\
\n\
</string>
    <string name="acknowledge_text">
        \
Finally, I made it! \n\
Professor, thank you for your help with this assignment! \n\
Discussed assignment requirement with Yudong Wang, Enting Wu, Xueyi Gu.
    </string>

    <string name="alertToastText">Hurry up, only 10 seconds left</string>
    <string name="restartToast">Cannot restart in Phase 2</string>
    <string name="gameReportTitle">Game Report Title</string>
    <string name="congratulation">Excellent! You did a great job!</string>
    <string name="originalWords">Original Words: </string>
    <string name="userWords">Words you found: </string>
    <string name="time">Time: </string>
    <string name="enjoyText">Hope you enjoy this game!</string>
    <string name="usernameHint">Enter username</string>

    <string name="dialogMessage">We have a new winner!</string>

    <string name="recoredDateTime">DateTime: </string>
    <string name="recordPhaseOneScore">Phase One Score: </string>
    <string name="recordPhaseTwoScore">Phase Two Score: </string>
    <string name="recordTotalScore">Total Score: </string>
    <string name="recordLongestWord">Longest Word You Found: </string>
    <string name="recordHighestWord">Score of Longest Word: </string>

</resources>
