<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            android:fontFamily="sans-serif" />

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textAlignment="center"
            android:fontFamily="sans-serif" />

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/program"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="345dp"
            app:srcCompat="@mipmap/me"
            android:id="@+id/imageView"
            android:layout_weight="0.45" />

        <TextView
            android:text="@string/phoneIMEI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/IMEI"
            android:layout_weight="0.38"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif" />
    </LinearLayout>
</ScrollView>